--- a/task-3.6/package.json
+++ b/task-3.6/package.json
@@ -17,6 +17,7 @@
     "polished": "^4.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-merge-refs": "^2.1.1",
     "react-router-dom": "^6.23.1",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.11"
