--- a/task-3.6/package.json
+++ b/task-3.6/package.json
@@ -10,8 +10,9 @@
 		"preview": "vite preview",
 		"storybook": "storybook dev -p 6006",
 		"build-storybook": "storybook build",
-		"test": "jest",
-		"vitest:test": "vitest"
+		"test": "vitest",
+		"test:coverage": "vitest run --coverage",
+		"test:jest": "jest"
 	},
 	"dependencies": {
 		"classnames": "^2.5.1",
@@ -44,6 +45,7 @@
 		"@typescript-eslint/eslint-plugin": "^7.2.0",
 		"@typescript-eslint/parser": "^7.2.0",
 		"@vitejs/plugin-react": "^4.2.1",
+		"@vitest/coverage-istanbul": "^2.0.4",
 		"autoprefixer": "^10.4.19",
 		"eslint": "^8.57.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
