--- a/task-3.6/package.json
+++ b/task-3.6/package.json
@@ -11,8 +11,7 @@
 		"storybook": "storybook dev -p 6006",
 		"build-storybook": "storybook build",
 		"test": "vitest",
-		"test:coverage": "vitest run --coverage",
-		"test:jest": "jest"
+		"test:coverage": "vitest run --coverage"
 	},
 	"dependencies": {
 		"classnames": "^2.5.1",
