--- a/task-3.8/backend/tsconfig.json
+++ b/task-3.8/backend/tsconfig.json
@@ -3,6 +3,7 @@
 		"target": "ES2022",
 		"module": "NodeNext",
 		"moduleResolution": "NodeNext",
+		"lib": ["ESNext.Promise"],
 		"sourceMap": true,
 		"outDir": "./dist",
 		"strict": true,
