--- a/task-3.8/frontend/package.json
+++ b/task-3.8/frontend/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.51.23",
+    "@types/uuid": "^10.0.0",
     "classnames": "^2.5.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
