--- a/task-3.3/package.json
+++ b/task-3.3/package.json
@@ -11,10 +11,8 @@
 	},
 	"dependencies": {
 		"classnames": "^2.5.1",
-		"formik": "^2.4.6",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"yup": "^1.4.0"
+		"react-dom": "^18.2.0"
 	},
 	"devDependencies": {
 		"@types/node": "^20.12.8",
